fix: correct z-index

--- a/src/styles/shared/header.scss
+++ b/src/styles/shared/header.scss
@@ -14,7 +14,7 @@
   line-height: 40px;
 
   background-color: $color-light-m;
-  z-index: 10;
+  z-index: 100;
 
   .header__container {
     padding: 0 150px;
